# python-internal-package-example

./: CLAUDE.md  README.md
example/: main.py
pkgbar/: README.md  pyproject.toml  requirements.txt
pkgbar/pkgbar/: __init__.py
pkgfoo/: README.md  pyproject.toml
pkgfoo/pkgfoo/: __init__.py
