[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgfoo"
dynamic = ["version"]
description = "Internal package for foo functionality"
readme = "README.md"
authors = [
    {name = "TatsuyaYamauchi"}
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tatsuyayamauchi/python-internal-package-example"
"Bug Reports" = "https://github.com/tatsuyayamauchi/python-internal-package-example/issues"
"Source" = "https://github.com/tatsuyayamauchi/python-internal-package-example/tree/main/pkgfoo"

[tool.setuptools.dynamic]
version = {attr = "pkgfoo.__version__"}
